kubernetes/home/external/app/homeassistant.yaml
apiVersion: v1
kind: Service
metadata:
  name: homeassistant-external
  namespace: external
spec:
  ports:
  - name: http
    port: 8123
    targetPort: 8123
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: homeassistant-external
  namespace: external
  labels:
    kubernetes.io/service-name: homeassistant-external
addressType: IPv4
ports:
  - name: http
    appProtocol: http
    protocol: TCP
    port: 8123
endpoints:
  - addresses:
      - "10.10.1.3"
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homeassistant-external
  namespace: external
  annotations:
    kubernetes.io/ingress.class: traefik
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Home Assistant
    gethomepage.dev/group: Home
    gethomepage.dev/icon: home-assistant
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: 'traefik-forwardauth-authelia@kubernetescrd'
    external-dns.kubernetes.io/enabled: "true"
    external-dns.kubernetes.io/hostname: hass.saturn.ci
    external-dns.kubernetes.io/target: jupiter.saturn.ci
spec:
  tls:
    - secretName: hass.saturn.ci
      hosts:
        - hass.saturn.ci
  rules:
    - host: "hass.saturn.ci"
      http:
        paths:
          - path: "/"
            pathType: "Prefix"
            backend:
              service:
                name: homeassistant-external
                port:
                  number: 8123
