kubernetes/home/external/app/router.yaml
apiVersion: v1
kind: Service
metadata:
  name: router-external
  namespace: external
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: router-external
  namespace: external
  labels:
    kubernetes.io/service-name: router-external
addressType: IPv4
ports:
  - name: http
    appProtocol: http
    protocol: TCP
    port: 80
endpoints:
  - addresses:
      - "10.10.0.1"
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: router-external
  namespace: external
  annotations:
    kubernetes.io/ingress.class: traefik
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Router
    gethomepage.dev/group: Network
    gethomepage.dev/icon: opnsense
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: 'traefik-forwardauth-authelia@kubernetescrd'
    external-dns.kubernetes.io/enabled: "true"
    external-dns.kubernetes.io/hostname: router.saturn.ci
    external-dns.kubernetes.io/target: jupiter.saturn.ci
spec:
  tls:
    - secretName: router.saturn.ci
      hosts:
        - router.saturn.ci
  rules:
    - host: "router.saturn.ci"
      http:
        paths:
          - path: "/"
            pathType: "Prefix"
            backend:
              service:
                name: router-external
                port:
                  number: 80
